--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_app
+name: charletwebsite
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
@@ -39,6 +39,7 @@ dependencies:
   url_launcher: ^6.0.9
   sizer: ^2.0.13
   font_awesome_flutter: ^9.1.0
+  flutter_lints: ^1.0.4
 
 
 dev_dependencies:
