--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   zoom_widget: ^0.2.1
   cached_network_image: ^3.2.0
   video_player: ^2.2.18
+  flutter_staggered_grid_view: ^0.6.1
 
 
 dev_dependencies:
