--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cached_network_image: ^3.2.0
   video_player: ^2.2.18
   flutter_staggered_grid_view: ^0.6.1
+  photo_view: ^0.14.0
 
 
 dev_dependencies:
