--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   video_player: ^2.2.18
   flutter_staggered_grid_view: ^0.6.1
   photo_view: ^0.14.0
+  masonry_grid: ^1.0.0
 
 
 dev_dependencies:
