--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.1
   photo_view: ^0.14.0
   masonry_grid: ^1.0.0
+  easy_image_viewer: ^1.1.0
 
 
 dev_dependencies:
